<?xml version="1.0"?>
<package format="2">
  <name>robust_dubins</name>
  <version>0.0.0</version>
  <description>A robust Dubins path finding library</description>

  <maintainer email="afb2001@wildcats.unh.edu">Alex Brown</maintainer>


  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
<!--  <build_depend>roscpp</build_depend>-->
<!--  <build_depend>message_generation</build_depend>-->
<!--  <build_depend>geometry_msgs</build_depend>-->
<!--  <build_export_depend>roscpp</build_export_depend>-->
<!--  <build_export_depend>geometry_msgs</build_export_depend>-->
<!--  <exec_depend>roscpp</exec_depend>-->
<!--  <exec_depend>message_runtime</exec_depend>-->
<!--  <exec_depend>geometry_msgs</exec_depend>-->

  <export>
  </export>
</package>
